Bug 254155 - Graph drawn upon right panel when opening interface details tab
Summary: Graph drawn upon right panel when opening interface details tab
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
: 272312 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-14 14:50 UTC by Clemens Eisserer
Modified: 2011-05-26 23:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (68.67 KB, image/png)
2010-10-14 14:50 UTC, Clemens Eisserer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Clemens Eisserer 2010-10-14 14:50:39 UTC
Created attachment 52509 [details]
screenshot

Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

When changing between the interface-detail-view of a connection (where the status, etc is shown) and the interface-list-view I get artifacts from the throughput-graph as shown in the attached screenshot.

This was Fedora-13 + updates-testing + QT-4.7

Reproducible: Sometimes
Comment 1 Lamarque V. Souza 2011-05-08 21:13:44 UTC
*** Bug 272312 has been marked as a duplicate of this bug. ***
Comment 2 Lamarque V. Souza 2011-05-09 06:01:46 UTC
Git commit 869945fbbf8a5fca40aaa1cdb9059acd6919acc5 by Lamarque V. Souza.
Committed on 09/05/2011 at 06:00.
Pushed by lvsouza into branch 'master'.

Hack to prevent graphical artifact during tab transition in
m_interfaceDetailsWidget.

BUG: 254155

M  +14   -2    applet/nmpopup.cpp     
M  +1    -0    applet/nmpopup.h     

http://commits.kde.org/networkmanagement/869945fbbf8a5fca40aaa1cdb9059acd6919acc5
Comment 3 Lamarque V. Souza 2011-05-09 06:01:46 UTC
Git commit 309d98bb6bed23ee994a5c9b262630d980b7e2a3 by Lamarque V. Souza.
Committed on 09/05/2011 at 06:00.
Pushed by lvsouza into branch 'nm09'.

Hack to prevent graphical artifact during tab transition in
m_interfaceDetailsWidget.

BUG: 254155
(cherry picked from commit 869945fbbf8a5fca40aaa1cdb9059acd6919acc5)

M  +14   -2    applet/nmpopup.cpp     
M  +1    -0    applet/nmpopup.h     

http://commits.kde.org/networkmanagement/309d98bb6bed23ee994a5c9b262630d980b7e2a3
Comment 4 Kai Uwe Broulik 2011-05-10 16:47:00 UTC
Hm, yes, now the graph is gone but now the adapter list slides out to the left and then suddenly there is the adapter information (which used to slide in, now it just appears). Can’t you make a fade effect (no sliding but a fade in for that?) there? :)
Comment 5 Lamarque V. Souza 2011-05-10 18:28:31 UTC
I am afraid it is not possible. It is the slide effect that caused the problem in the first place, well, actually the problem is that QGraphics* classes are visible by default, which means they are visible while being painted. Anyway, my solution is hiding the interface details widget until the slide effect has finished. If I add any other effect the problem can go back (possible) or the interface details widget will take longer to appear (that is for sure) because I would have to wait until the slide effect finishes to start any other effect.
Comment 6 Kai Uwe Broulik 2011-05-10 23:31:51 UTC
At least that would Plasma-ish noble :)
Comment 7 Will Stephenson 2011-05-26 23:50:46 UTC
Git commit e9c15d3df2909f0da57549ea3af1754f21c9a21b by Will Stephenson, on behalf of Lamarque V. Souza.
Committed on 09/05/2011 at 06:00.
Pushed by wstephens into branch 'libnm-qt'.

Hack to prevent graphical artifact during tab transition in
m_interfaceDetailsWidget.

BUG: 254155
(cherry picked from commit 869945fbbf8a5fca40aaa1cdb9059acd6919acc5)
(cherry picked from commit 309d98bb6bed23ee994a5c9b262630d980b7e2a3)

M  +14   -2    applet/nmpopup.cpp     
M  +1    -0    applet/nmpopup.h     

http://commits.kde.org/networkmanagement/e9c15d3df2909f0da57549ea3af1754f21c9a21b