Hack to prevent graphical artifact during tab transition in m_interfaceDetailsWidget.

BUG: 254155
(cherry picked from commit 869945fbbf8a5fca40aaa1cdb9059acd6919acc5)